# Douyin_data_dashboard

./: .cursorrules  .dockerignore  .env-example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTIONS.md  LICENSE  README.md  alembic.ini  copier.yaml  funboost_config.py  justfile  nb_log_config.py  pyproject.toml  table.md  抖音数据中台系统架构设计.md
.copier/: .env.jinja  README.md.jinja  post_copy.py  pyproject.toml.jinja
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATES/: circuit_breaker_implementation.md
.github/issues/: feat-health-check-endpoint.md
.github/scripts/: uv-sync-with-mirrors.sh
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
docker/: .env.server-a.example  .env.server-b.example  .env.server1  .env.server2  Dockerfile  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
docs/: phase3-experience-real-api.md  phase3-experience-seed.sql
docs/plans/: 2025-02-07-schema-enum-consistency.md  2026-02-05-import-service-api.md  2026-02-13-api-endpoint-dev-notice-plan.md  2026-02-14-api-mock-modules-access-plan.md  (+5 more)
migrations/: env.py  seed_data.py
prompt/: CLAUDE.md
scripts/: agent_rules.py  douyin_bootstrap_login.py  shop_dashboard_clear_mismatch_circuit.py  shop_dashboard_clear_state_bundles.py
src/: exceptions.py  handlers.py  loguru_setup.py  main.py  retry.py  session.py
tests/: conftest.py  test_exceptions.py  test_handlers.py  test_retry.py
(+384 files in other folders)
